--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@fontsource/fira-mono": "^4.5.0",
     "@lukeed/uuid": "^2.0.0",
+    "@sveltejs/adapter-vercel": "^1.0.0-next.49",
     "cookie": "^0.4.1"
   }
 }
