--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "devDependencies": {
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
-    "autoprefixer": "^10.4.4",
-    "postcss": "^8.4.12",
-    "prettier": "^2.6.2",
-    "svelte": "^3.46.0",
-    "tailwindcss": "^3.0.24"
+    "autoprefixer": "10.4.4",
+    "postcss": "8.4.12",
+    "prettier": "2.6.2",
+    "svelte": "3.46.0",
+    "tailwindcss": "3.0.24"
   },
   "type": "module",
   "dependencies": {
