--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   },
   "type": "module",
   "dependencies": {
-    "@fontsource/fira-mono": "^4.5.0",
-    "@lukeed/uuid": "^2.0.0",
+    "@fontsource/fira-mono": "4.5.0",
+    "@lukeed/uuid": "2.0.0",
     "@sveltejs/adapter-vercel": "next",
-    "cookie": "^0.4.1"
+    "cookie": "0.4.1"
   }
 }
