--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@fontsource/fira-mono": "4.5.0",
     "@lukeed/uuid": "2.0.0",
+    "cloudinary": "^1.29.1",
     "cookie": "0.4.1"
   }
 }
